
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timeval {int dummy; } ;
struct sockaddr_in {int dummy; } ;
typedef int socklen_t ;
typedef int remote ;
typedef int fd_set ;


 int ERR_remove_state (int ) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int SSL_CTX_free (int ) ;
 int SSL_RECEIVED_SHUTDOWN ;
 int SSL_SENT_SHUTDOWN ;
 int SSL_accept (int *) ;
 int SSL_free (int *) ;
 int * SSL_new (int ) ;
 int SSL_set_accept_state (int *) ;
 int SSL_set_fd (int *,int) ;
 int SSL_set_shutdown (int *,int) ;
 int SSL_write (int *,char*,int ) ;
 int accept (int,struct sockaddr_in*,int*) ;
 int close (int) ;
 int ctx ;
 int exit (int) ;
 int select (int,int *,int *,int *,int ) ;
 int * ssl ;
 int strcat (char*,char*) ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;

__attribute__((used)) static void server_loop(int descr)
{
    struct timeval tv;
    fd_set read_mask ;

    FD_ZERO(&read_mask);
    FD_SET(descr, &read_mask);
    for (;;) {
        struct sockaddr_in remote;
        socklen_t len = sizeof(remote);
        int fd;

        if (select(descr+1, &read_mask, ((void*)0), ((void*)0), 0 ) == -1)
            continue;
        fd = accept(descr, &remote, &len);
        if (fd >=0) {
            char obuf[1024];
            if ((ssl = SSL_new (ctx)) != ((void*)0)) {
                SSL_set_fd (ssl, fd);
                SSL_set_accept_state(ssl);
                if ((SSL_accept (ssl)) == -1)
                        exit(1);

                strcpy(obuf, "HTTP/1.0 200 OK\n");
                strcat(obuf, "Content-Length: 40\n");
                strcat(obuf, "Content-Type: text/html\n\n");
                strcat(obuf, "<html><body>You're owned!</body></html>");
                SSL_write (ssl, obuf, strlen(obuf));
                SSL_set_shutdown(ssl,
                        SSL_SENT_SHUTDOWN|SSL_RECEIVED_SHUTDOWN);
                SSL_free (ssl);
                ERR_remove_state(0);
            }
            close(fd);
        }
    }
    SSL_CTX_free (ctx);
}
